History of this buildout
========================

7.0 (unreleased)
----------------

- Removed RelStorage, because we are moving back to Zest servers.  [maurits]


6.3.7 (unreleased)
------------------

- MINA-167: larger font size.  [maurits]


6.3.6 (2017-09-18)
------------------

- Small text change in 'move' alert.  [maurits]


6.3.5 (2017-09-18)
------------------

- Expire 'move' cookie after three days.  [maurits]


6.3.4 (2017-09-15)
------------------

- MINA-166: Show message of move in header.  [maurits]


6.3.3 (2017-08-14)
------------------

- Varnish 4.0.5 security release.  [maurits]

- Plone 4.3.15 final, only updated plone.app.textfield to 1.2.9.  [maurits]


6.3.2 (2017-07-05)
------------------

- Plone 4.3.15.  [maurits]


6.3.1 (2017-06-01)
------------------

- Use a virtualenv and 'bin/pip install -r requirements.txt' for bootstrapping.
  [maurits]

- Minaraad oefen is moving to oe-5 and oe-6.  [maurits]

- Updated two eea faceted navigation packages.  [maurits]


6.3 (2017-04-28)
----------------

- Upgrade to Plone 4.3.14.  [maurits]


6.2 (2017-02-27)
----------------

- MINA-157: Use data-featherlight-type="image".
  This avoids an almost black screen when loading the full image.
  [maurits]

- MINA-158: Use large scale as big imsage url for featherlight.
  The original image may be too big.  [maurits]


6.1.7 (2017-01-17)
------------------

- Products.PloneHotfix20170117 1.0.  [maurits]


6.1.6 (2016-12-15)
------------------

- Warmup after a start or restart.  [maurits]

- Warmup the homepage too.  [maurits]


6.1.5 (2016-12-15)
------------------

- MINA-161: In subscription mail show the agenda items.  [maurits]

- MINA-161: In subscription mail only show location text when it is set.
  Otherwise you would get a strange sentence.
  [maurits]

- Added warmup and warmup-all scripts.  Included these in the fabfile.
  [maurits]

- Use collective.recipe.genshi where needed.  We used