@@ -12,10 +12,8 @@ parts =
     zeoclient
     backup
     test
-    env
     warmup
     warmup-all
-#    lxml
 deployment-parts =
     munin
     varnish-build
@@ -26,11 +24,13 @@ deployment-parts =
     supervisor
     debugclient
     crontab-start
-    crontab-restart
-    crontab-warmup
-#    crontab-pack
-#    crontab-projects-reminder
-#    crontab-cleanup-pas
+# Restart plus warmup was done once a week at milieuinfo.
+# Let's try without this on our servers.
+#    crontab-restart
+#    crontab-warmup
+    crontab-pack
+    crontab-projects-reminder
+    crontab-cleanup-pas
     logrotate.conf
 
 eggs =
@@ -40,8 +40,6 @@ develop =
     src/minaraad.theme
 
 auto-checkout =
-#    eea.facetednavigation
-#    plone.app.imagecropping
 allow-picked-versions = false
 show-picked-versions = true
 
@@ -54,26 +52,7 @@ extends =
 versions = versions
 sources = sources
 
-[remotes]
-# (Repository locations)
-plone = git://github.com/plone
-plone_push = git@github.com:plone
-
 [sources]
-Products.PortalTransforms = git ${remotes:plone}/Products.PortalTransforms.git pushurl=${remotes:plone_push}/Products.PortalTransforms.git branch=maurits-subprocess
-collective.mailchimp = git https://github.com/collective/collective.mailchimp.git pushurl=git@github.com:collective/collective.mailchimp.git branch=master
-eea.facetednavigation = git https://github.com/collective/eea.facetednavigation.git pushurl=git@github.com:collective/eea.facetednavigation.git branch=master
-Products.SimpleAttachment = git https://github.com/collective/Products.SimpleAttachment.git pushurl=git@github.com:collective/Products.SimpleAttachment.git branch=master
-plone.app.imagecropping = git https://github.com/collective/plone.app.imagecropping.git pushurl=git@github.com:collective/plone.app.imagecropping.git branch=1.x
-plone.app.upgrade = git ${remotes:plone}/plone.app.upgrade.git pushurl=${remotes:plone_push}/plone.app.upgrade.git branch=master
-plone.scale = git ${remotes:plone}/plone.scale.git pushurl=${remotes:plone}/plone.scale.git branch=1.4.x
-
-[env]
-recipe = gocept.recipe.env
-# The recipe reads environment variables. This next empty value is
-# only used when the environment variable does not exist, so that
-# buildout does not give an error when it wants to use the variable.
-HTTP_PROXY =
 
 [chown]
 recipe = plone.recipe.command
@@ -87,7 +66,7 @@ varnish = 12080
 varnish_telnet = 12082
 varnish_next = ${:instance}
 
-# Blob storage via NFS:
+# Blob storage:
 blob_storage = ${buildout:directory}/var/blobstorage
 
 # Number of items in zeoclient memory per thread.
@@ -119,16 +98,8 @@ verbose_security = off
 # Log for e-mail sending
 minaraad-log-path = ${buildout:directory}/var/log
 
-# Purge requests are allowed from 127.0.0.1, from the backend, and
-# from these extra domains:
-varnish_purge_hosts =
-
-# IP or hostname that varnish listens on.  Usually, 127.0.0.1 is
-# enough, but in Belgium this should include the public interface,
-# because the loadbalancer is on a separate machine and varnish should
-# accept connections there.  But '*' works for that, at least on
-# Linux.  The Mac does not like it.
-varnish_host = *
+# IP or hostname that varnish listens on.
+varnish_host = 127.0.0.1
 
 # For warmup:
 plonesite = minaraad
@@ -145,9 +116,9 @@ defaults = ['--auto-color', '--auto-progress', '-s', 'Products.minaraad', '-s', 
 environment = test_env
 
 [test_env]
-PTS_LANGUAGES=nl
-zope_i18n_allowed_languages=nl
-zope_i18n_compile_mo_files=true
+PTS_LANGUAGES = nl
+zope_i18n_allowed_languages = nl
+zope_i18n_compile_mo_files = true
 
 [zeoclient]
 recipe = plone.recipe.zope2instance
@@ -165,8 +136,6 @@ environment-vars =
     PTS_LANGUAGES nl
     zope_i18n_allowed_languages nl
     MINARAAD_LOG_PATH ${conf:minaraad-log-path}
-    HTTP_PROXY ${env:HTTP_PROXY}
-    HTTPS_PROXY ${env:HTTP_PROXY}
     zope_i18n_compile_mo_files true
     EXPERIMENTAL_PUBLISH_TRAVERSE_ONLY_WARN true
 
@@ -242,10 +211,6 @@ eggs = munin.zope
 password = secret
 arguments = http_address='${conf:instance}', user='munin:${:password}'
 
-[lxml]
-recipe = z3c.recipe.staticlxml
-egg = lxml
-
 [varnish-secret]
 recipe = plone.recipe.command
 command =
@@ -272,7 +237,6 @@ url = http://varnish-cache.org/_downloads/varnish-4.0.5.tar.gz
 [varnish-configuration]
 recipe = plone.recipe.varnish:configuration
 backends = 127.0.0.1:${conf:varnish_next}
-purge-hosts = ${conf:varnish_purge_hosts}
 
 [varnishd]
 recipe = plone.recipe.varnish:script
@@ -322,7 +286,7 @@ command = ${buildout:directory}/bin/warmup-all
 [crontab-pack]
 recipe = z3c.recipe.usercrontab
 times = ${conf:pack-time}
-command = ${buildout:directory}/bin/zodbpack --days=1 ${buildout:directory}/parts/conf/zodbpack.cfg
+command = ${buildout:directory}/bin/zeopack
 
 [crontab-projects-reminder]
 recipe = z3c.recipe.usercrontab
@@ -358,20 +322,17 @@ input = inline:
     # warmup http://localhost:8080/minaraad
     # warmup https://www.minaraad.be
     echo "Warmup zope server cache for $1..."
-    # On the server we must not use the http proxy, as it cannot access localhost.
-    # The proxy *can* access www.minaraad.be, so if we want that on the server,
-    # we should do this differently, maybe with an extra argument.
-    wget --no-proxy -O /dev/null "$1/"
-    wget --no-proxy -O /dev/null "$1/over-de-minaraad"
-    wget --no-proxy -O /dev/null "$1/Contact"
-    wget --no-proxy -O /dev/null "$1/zoeken"
-    wget --no-proxy -O /dev/null "$1/themas"
-    wget --no-proxy -O /dev/null "$1/themas/vergroening-van-de-economie"
-    wget --no-proxy -O /dev/null "$1/themas/bestuurskwaliteit"
-    wget --no-proxy -O /dev/null "$1/themas/materialen"
-    wget --no-proxy -O /dev/null "$1/themas/biodiversiteit"
-    wget --no-proxy -O /dev/null "$1/themas/hinder"
-    wget --no-proxy -O /dev/null "$1/themas/klimaat"
+    wget -O /dev/null "$1/"
+    wget -O /dev/null "$1/over-de-minaraad"
+    wget -O /dev/null "$1/Contact"
+    wget -O /dev/null "$1/zoeken"
+    wget -O /dev/null "$1/themas"
+    wget -O /dev/null "$1/themas/vergroening-van-de-economie"
+    wget -O /dev/null "$1/themas/bestuurskwaliteit"
+    wget -O /dev/null "$1/themas/materialen"
+    wget -O /dev/null "$1/themas/biodiversiteit"
+    wget -O /dev/null "$1/themas/hinder"
+    wget -O /dev/null "$1/themas/klimaat"
     # Note that Digibib is only for authenticated users, so we don't load it.
     echo "Done warming up."
 output = ${buildout:directory}/bin/warmup
