@@ -13,8 +13,6 @@ parts +=
 [conf]
 # ramlocation = /dev/shm does not work on Mac.
 ramlocation = ${conf:var}
-# We have '*' as varnish_host in base.cfg, but Mac does not accept this.
-varnish_host = 127.0.0.1
 # Debugging.  Note that debug is automatically turned on when you run
 # 'bin/instance fg'
 verbose_security = on
