@@ -1,9 +1,9 @@
 [buildout]
 
 parts +=
-         nodeenv
-         nodejs
-         grunt_start
+    nodeenv
+    nodejs
+    grunt_start
 
 [env]
 recipe = gocept.recipe.env
