@@ -1,23 +1,15 @@
 [buildout]
 extends =
     productie.cfg
+parts -=
+# Do not send e-mails reminding about projects on oefen
+# to avoid confusing users with mails from this system.
+    crontab-projects-reminder
 
 [conf]
 release = oefen
 # Schedules
 pack-time = 15 2 * * 6
 
-# Purge requests are allowed from 127.0.0.1, from the backend, and
-# from these extra domains:
-varnish_purge_hosts =
-    plone-minaraad-oe-5.mmis.be
-    plone-minaraad-oe-6.mmis.be
-
 # For warmup:
 domain = oefen.minaraad.be
-
-[postgresconf]
-dbname = minaraad_oefen
-host = postgres-oefen-77
-# password = secret
-port = 5509
