@@ -1,20 +1,0 @@
-[buildout]
-extends =
-    productie.cfg
-
-[conf]
-release = ontwikkel
-# Purge requests are allowed from 127.0.0.1, from the backend, and
-# from these extra domains:
-varnish_purge_hosts =
-    plone-minaraad-on-3.mmis.be
-    plone-minaraad-on-4.mmis.be
-
-# For warmup:
-domain = ontwikkel.minaraad.be
-
-[postgresconf]
-dbname = minaraad_ontwikkel
-host = postgres-ontwikkel-76
-password = secret
-port = 5509
