@@ -11,18 +11,3 @@ release = productie
 pack-time = 30 2 * * 6
 projects-reminder-time = 0 10 * * Tue,Thu
 cleanup-pas-time = 30 1 * * 6
-
-# Blob storage via NFS:
-blob_storage = /home/zope/minaraad-blobs
-
-# Purge requests are allowed from 127.0.0.1, from the backend, and
-# from these extra domains:
-varnish_purge_hosts =
-    plone-minaraad-pr-3.mmis.be
-    plone-minaraad-pr-4.mmis.be
-
-[postgresconf]
-dbname = minaraad_productie
-host = postgres-productie-74
-# password = secret
-port = 5509
