@@ -67,7 +67,6 @@ threadframe = 0.2
 wildcard.fixpersistentutilities = 1.1b7
 z3c.jbot = 0.7.2
 z3c.pt = 3.0
-z3c.recipe.staticlxml = 0.10
 z3c.recipe.usercrontab = 1.4
 zc.recipe.cmmi = 1.3.6
 zc.recipe.deployment = 1.3.0
